// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: projection > ( { x: 1, y: 2 } ).x 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?2",
      "Num ~~ ?1",
      "Schema [ x: Num, y: Num ] ~~ Schema [ x: Num, y: Num ]",
    ],
    "term": "(Struct [ x: 1, y: 2 ]).x",
    "type": "Num",
  },
}
`;

exports[`inference: projection > ( { x: 1, y: 2 } ).x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 2,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "arg": {
            "row": {
              "label": "x",
              "row": {
                "label": "y",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "lvl": 0,
        "right": {
          "arg": {
            "row": {
              "label": "x",
              "row": {
                "label": "y",
                "row": {
                  "type": "empty",
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Num",
                  },
                },
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Num",
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 2,
        },
      },
    },
    "term": {
      "label": "x",
      "term": {
        "arg": {
          "row": {
            "label": "x",
            "row": {
              "label": "y",
              "row": {
                "type": "empty",
              },
              "type": "extension",
              "value": {
                "type": "Lit",
                "value": {
                  "type": "Num",
                  "value": 2,
                },
              },
            },
            "type": "extension",
            "value": {
              "type": "Lit",
              "value": {
                "type": "Num",
                "value": 1,
              },
            },
          },
          "type": "Row",
        },
        "func": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Struct",
          },
        },
        "icit": "Explicit",
        "type": "App",
      },
      "type": "Proj",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Num",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: projection > \\obj -> obj.x 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ x: ?2 | ?3 ] ~~ ?1",
    ],
    "term": "(λ(obj: (?1 :: Type)) -> (obj).x : Π(obj: (?1 :: Type)) -> (?2 :: Type))",
    "type": "Π(obj: ?1) -> (closure: (?2 :: Type) -| Γ: obj)",
  },
}
`;

exports[`inference: projection > \\obj -> obj.x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "arg": {
            "row": {
              "label": "x",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 3,
                },
              },
              "type": "extension",
              "value": {
                "type": "Neutral",
                "value": {
                  "type": "Var",
                  "variable": {
                    "lvl": 1,
                    "type": "Meta",
                    "val": 2,
                  },
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "lvl": 1,
        "right": {
          "type": "Var",
          "variable": {
            "lvl": 0,
            "type": "Meta",
            "val": 1,
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 3,
        },
      },
    },
    "term": {
      "ann": {
        "binding": {
          "annotation": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
          "icit": "Explicit",
          "type": "Pi",
          "variable": "obj",
        },
        "body": {
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "Abs",
      },
      "term": {
        "binding": {
          "annotation": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
          "icit": "Explicit",
          "type": "Lambda",
          "variable": "obj",
        },
        "body": {
          "label": "x",
          "term": {
            "type": "Var",
            "variable": {
              "index": 0,
              "type": "Bound",
            },
          },
          "type": "Proj",
        },
        "type": "Abs",
      },
      "type": "Ann",
    },
    "type": {
      "binder": {
        "annotation": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "obj",
      },
      "closure": {
        "ctx": {
          "env": [],
          "implicits": [],
          "labels": {},
          "metas": {},
          "record": {},
          "sigma": {},
          "zonker": {},
        },
        "term": {
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "Closure",
      },
      "type": "Abs",
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: projection > { let proj = \\obj -> obj.x; } 1`] = `
{
  "displays": {
    "constraints": [
      "Schema [ x: ?3 | ?4 ] ~~ ?2",
      "Π(obj: ?2) -> (closure: (?3 :: Type) -| Γ: obj; proj) ~~ ?1",
    ],
    "term": "{
  let proj
    : Π(r: Row) =>
      (closure: Π(a: Type) => Π(obj: Schema [ x: a | r ]) -> a -| Γ: r; proj)
    = λ(r: Row) =>
      λ(a: Type) =>
        (λ(obj: Schema [ x: a | r ]) -> (obj).x : Π(obj: Schema [ x: a | r ]) ->
          a);
  return unit;
}",
    "type": "Unit",
  },
}
`;

exports[`inference: projection > { let proj = \\obj -> obj.x; } 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "arg": {
            "row": {
              "label": "x",
              "row": {
                "type": "variable",
                "variable": {
                  "lvl": 2,
                  "type": "Meta",
                  "val": 4,
                },
              },
              "type": "extension",
              "value": {
                "type": "Neutral",
                "value": {
                  "type": "Var",
                  "variable": {
                    "lvl": 2,
                    "type": "Meta",
                    "val": 3,
                  },
                },
              },
            },
            "type": "Row",
          },
          "func": {
            "type": "Lit",
            "value": {
              "type": "Atom",
              "value": "Schema",
            },
          },
          "icit": "Explicit",
          "type": "App",
        },
        "lvl": 2,
        "right": {
          "type": "Var",
          "variable": {
            "lvl": 1,
            "type": "Meta",
            "val": 2,
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "binder": {
            "annotation": {
              "type": "Neutral",
              "value": {
                "type": "Var",
                "variable": {
                  "lvl": 1,
                  "type": "Meta",
                  "val": 2,
                },
              },
            },
            "icit": "Explicit",
            "type": "Pi",
            "variable": "obj",
          },
          "closure": {
            "ctx": {
              "env": [
                {
                  "name": {
                    "type": "Let",
                    "variable": "proj",
                  },
                  "nf": {
                    "type": "Neutral",
                    "value": {
                      "type": "Var",
                      "variable": {
                        "lvl": 0,
                        "type": "Bound",
                      },
                    },
                  },
                  "type": [
                    {
                      "type": "Let",
                      "variable": "proj",
                    },
                    "source",
                    {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Meta",
                          "val": 1,
                        },
                      },
                    },
                  ],
                },
              ],
              "implicits": [],
              "labels": {},
              "metas": {},
              "record": {},
              "sigma": {},
              "zonker": {},
            },
            "term": {
              "type": "Var",
              "variable": {
                "lvl": 2,
                "type": "Meta",
                "val": 3,
              },
            },
            "type": "Closure",
          },
          "type": "Abs",
        },
        "lvl": 1,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 0,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 0,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 1,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Row",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
    },
    "term": {
      "return": {
        "type": "Lit",
        "value": {
          "type": "unit",
        },
      },
      "statements": [
        {
          "annotation": {
            "binder": {
              "annotation": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Row",
                },
              },
              "icit": "Implicit",
              "type": "Pi",
              "variable": "r",
            },
            "closure": {
              "ctx": {
                "env": [
                  {
                    "name": {
                      "type": "Let",
                      "variable": "proj",
                    },
                    "nf": {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Bound",
                        },
                      },
                    },
                    "type": [
                      {
                        "type": "Let",
                        "variable": "proj",
                      },
                      "source",
                      {
                        "type": "Neutral",
                        "value": {
                          "type": "Var",
                          "variable": {
                            "lvl": 0,
                            "type": "Meta",
                            "val": 1,
                          },
                        },
                      },
                    ],
                  },
                ],
                "implicits": [],
                "labels": {},
                "metas": {
                  "1": {
                    "ann": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 0,
                      "type": "Meta",
                      "val": 1,
                    },
                  },
                  "2": {
                    "ann": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 1,
                      "type": "Meta",
                      "val": 2,
                    },
                  },
                  "3": {
                    "ann": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 2,
                      "type": "Meta",
                      "val": 3,
                    },
                  },
                  "4": {
                    "ann": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Row",
                      },
                    },
                    "meta": {
                      "lvl": 2,
                      "type": "Meta",
                      "val": 4,
                    },
                  },
                },
                "record": {},
                "sigma": {},
                "zonker": {
                  "1": {
                    "binder": {
                      "annotation": {
                        "type": "Neutral",
                        "value": {
                          "type": "Var",
                          "variable": {
                            "lvl": 1,
                            "type": "Meta",
                            "val": 2,
                          },
                        },
                      },
                      "icit": "Explicit",
                      "type": "Pi",
                      "variable": "obj",
                    },
                    "closure": {
                      "ctx": {
                        "env": [
                          {
                            "name": {
                              "type": "Let",
                              "variable": "proj",
                            },
                            "nf": {
                              "type": "Neutral",
                              "value": {
                                "type": "Var",
                                "variable": {
                                  "lvl": 0,
                                  "type": "Bound",
                                },
                              },
                            },
                            "type": [
                              {
                                "type": "Let",
                                "variable": "proj",
                              },
                              "source",
                              {
                                "type": "Neutral",
                                "value": {
                                  "type": "Var",
                                  "variable": {
                                    "lvl": 0,
                                    "type": "Meta",
                                    "val": 1,
                                  },
                                },
                              },
                            ],
                          },
                        ],
                        "implicits": [],
                        "labels": {},
                        "metas": {},
                        "record": {},
                        "sigma": {},
                        "zonker": {},
                      },
                      "term": {
                        "type": "Var",
                        "variable": {
                          "lvl": 2,
                          "type": "Meta",
                          "val": 3,
                        },
                      },
                      "type": "Closure",
                    },
                    "type": "Abs",
                  },
                  "2": {
                    "arg": {
                      "row": {
                        "label": "x",
                        "row": {
                          "type": "variable",
                          "variable": {
                            "lvl": 2,
                            "type": "Meta",
                            "val": 4,
                          },
                        },
                        "type": "extension",
                        "value": {
                          "type": "Neutral",
                          "value": {
                            "type": "Var",
                            "variable": {
                              "lvl": 2,
                              "type": "Meta",
                              "val": 3,
                            },
                          },
                        },
                      },
                      "type": "Row",
                    },
                    "func": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Schema",
                      },
                    },
                    "icit": "Explicit",
                    "type": "App",
                  },
                  "3": {
                    "type": "Var",
                    "variable": {
                      "lvl": 2,
                      "type": "Bound",
                    },
                  },
                  "4": {
                    "type": "Var",
                    "variable": {
                      "lvl": 1,
                      "type": "Bound",
                    },
                  },
                },
              },
              "term": {
                "binding": {
                  "annotation": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "icit": "Implicit",
                  "type": "Pi",
                  "variable": "a",
                },
                "body": {
                  "binding": {
                    "annotation": {
                      "arg": {
                        "row": {
                          "label": "x",
                          "row": {
                            "type": "variable",
                            "variable": {
                              "index": 1,
                              "type": "Bound",
                            },
                          },
                          "type": "extension",
                          "value": {
                            "type": "Var",
                            "variable": {
                              "index": 0,
                              "type": "Bound",
                            },
                          },
                        },
                        "type": "Row",
                      },
                      "func": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Schema",
                        },
                      },
                      "icit": "Explicit",
                      "type": "App",
                    },
                    "icit": "Explicit",
                    "type": "Pi",
                    "variable": "obj",
                  },
                  "body": {
                    "type": "Var",
                    "variable": {
                      "index": 1,
                      "type": "Bound",
                    },
                  },
                  "type": "Abs",
                },
                "type": "Abs",
              },
              "type": "Closure",
            },
            "type": "Abs",
          },
          "type": "Let",
          "value": {
            "binding": {
              "annotation": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Row",
                },
              },
              "icit": "Implicit",
              "type": "Lambda",
              "variable": "r",
            },
            "body": {
              "binding": {
                "annotation": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Type",
                  },
                },
                "icit": "Implicit",
                "type": "Lambda",
                "variable": "a",
              },
              "body": {
                "ann": {
                  "binding": {
                    "annotation": {
                      "arg": {
                        "row": {
                          "label": "x",
                          "row": {
                            "type": "variable",
                            "variable": {
                              "lvl": 2,
                              "type": "Meta",
                              "val": 4,
                            },
                          },
                          "type": "extension",
                          "value": {
                            "type": "Var",
                            "variable": {
                              "index": 0,
                              "type": "Bound",
                            },
                          },
                        },
                        "type": "Row",
                      },
                      "func": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Schema",
                        },
                      },
                      "icit": "Explicit",
                      "type": "App",
                    },
                    "icit": "Explicit",
                    "type": "Pi",
                    "variable": "obj",
                  },
                  "body": {
                    "type": "Var",
                    "variable": {
                      "index": 1,
                      "type": "Bound",
                    },
                  },
                  "type": "Abs",
                },
                "term": {
                  "binding": {
                    "annotation": {
                      "arg": {
                        "row": {
                          "label": "x",
                          "row": {
                            "type": "variable",
                            "variable": {
                              "lvl": 2,
                              "type": "Meta",
                              "val": 4,
                            },
                          },
                          "type": "extension",
                          "value": {
                            "type": "Var",
                            "variable": {
                              "index": 0,
                              "type": "Bound",
                            },
                          },
                        },
                        "type": "Row",
                      },
                      "func": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Schema",
                        },
                      },
                      "icit": "Explicit",
                      "type": "App",
                    },
                    "icit": "Explicit",
                    "type": "Lambda",
                    "variable": "obj",
                  },
                  "body": {
                    "label": "x",
                    "term": {
                      "type": "Var",
                      "variable": {
                        "index": 0,
                        "type": "Bound",
                      },
                    },
                    "type": "Proj",
                  },
                  "type": "Abs",
                },
                "type": "Ann",
              },
              "type": "Abs",
            },
            "type": "Abs",
          },
          "variable": "proj",
        },
      ],
      "type": "Block",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Unit",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: projection > Projection from Sigma types > projects from a simple dependent pair 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "?1 ~~ L1",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "Type ~~ Type",
      "String ~~ ?4",
      "Num ~~ ?3",
      "String ~~ String",
      ""hello" ~~ ?6",
      "Num ~~ Num",
      "1 ~~ ?5",
    ],
    "term": "{
  let Pair
    : Π(a: Type) -> (closure: Π(p: Π(t1: a) -> Type) -> Type -| Γ: a)
    = λ(a: Type) ->
      λ(p: Π(t1: a) -> Type) ->
        Σ($sig: [ snd: p :fst, fst: a ]) . Schema [ snd: p :fst, fst: a ];
  let p
    : Σ($sig: [ snd: String, fst: Num ]) .
      (closure: Schema [ snd: p :fst, fst: a ] -| Γ: p; a; Pair)
    = Struct [ snd: "hello", fst: 1 ];
  return (p).snd;
}",
    "type": "String",
  },
}
`;

exports[`inference: projection > Projection from Sigma types > projects from a simple dependent pair 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 3,
              "type": "Meta",
              "val": 1,
            },
          },
        },
        "lvl": 3,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 1,
              "type": "Bound",
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 3,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 3,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 2,
              "type": "Meta",
              "val": 4,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 2,
              "type": "Meta",
              "val": 3,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "String",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "String",
            "value": "hello",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 2,
              "type": "Meta",
              "val": 6,
            },
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 2,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Num",
            "value": 1,
          },
        },
        "lvl": 2,
        "right": {
          "type": "Neutral",
          "value": {
            "type": "Var",
            "variable": {
              "lvl": 2,
              "type": "Meta",
              "val": 5,
            },
          },
        },
        "type": "assign",
      },
    ],
    "metas": {
      "1": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 3,
          "type": "Meta",
          "val": 1,
        },
      },
      "2": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 3,
          "type": "Meta",
          "val": 2,
        },
      },
      "3": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 3,
        },
      },
      "4": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 4,
        },
      },
      "5": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 5,
        },
      },
      "6": {
        "ann": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "meta": {
          "lvl": 2,
          "type": "Meta",
          "val": 6,
        },
      },
    },
    "term": {
      "return": {
        "label": "snd",
        "term": {
          "type": "Var",
          "variable": {
            "index": 0,
            "type": "Bound",
          },
        },
        "type": "Proj",
      },
      "statements": [
        {
          "annotation": {
            "binder": {
              "annotation": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Type",
                },
              },
              "icit": "Explicit",
              "type": "Pi",
              "variable": "a",
            },
            "closure": {
              "ctx": {
                "env": [],
                "implicits": [],
                "labels": {},
                "metas": {},
                "record": {},
                "sigma": {},
                "zonker": {},
              },
              "term": {
                "binding": {
                  "annotation": {
                    "binding": {
                      "annotation": {
                        "type": "Var",
                        "variable": {
                          "index": 0,
                          "type": "Bound",
                        },
                      },
                      "icit": "Explicit",
                      "type": "Pi",
                      "variable": "t1",
                    },
                    "body": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "type": "Abs",
                  },
                  "icit": "Explicit",
                  "type": "Pi",
                  "variable": "p",
                },
                "body": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Type",
                  },
                },
                "type": "Abs",
              },
              "type": "Closure",
            },
            "type": "Abs",
          },
          "type": "Let",
          "value": {
            "binding": {
              "annotation": {
                "type": "Lit",
                "value": {
                  "type": "Atom",
                  "value": "Type",
                },
              },
              "icit": "Explicit",
              "type": "Lambda",
              "variable": "a",
            },
            "body": {
              "binding": {
                "annotation": {
                  "binding": {
                    "annotation": {
                      "type": "Var",
                      "variable": {
                        "index": 0,
                        "type": "Bound",
                      },
                    },
                    "icit": "Explicit",
                    "type": "Pi",
                    "variable": "t1",
                  },
                  "body": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Type",
                    },
                  },
                  "type": "Abs",
                },
                "icit": "Explicit",
                "type": "Lambda",
                "variable": "p",
              },
              "body": {
                "binding": {
                  "annotation": {
                    "row": {
                      "label": "snd",
                      "row": {
                        "label": "fst",
                        "row": {
                          "type": "empty",
                        },
                        "type": "extension",
                        "value": {
                          "type": "Var",
                          "variable": {
                            "index": 1,
                            "type": "Bound",
                          },
                        },
                      },
                      "type": "extension",
                      "value": {
                        "arg": {
                          "type": "Var",
                          "variable": {
                            "name": "fst",
                            "type": "Label",
                          },
                        },
                        "func": {
                          "type": "Var",
                          "variable": {
                            "index": 0,
                            "type": "Bound",
                          },
                        },
                        "icit": "Explicit",
                        "type": "App",
                      },
                    },
                    "type": "Row",
                  },
                  "type": "Sigma",
                  "variable": "$sig",
                },
                "body": {
                  "arg": {
                    "row": {
                      "label": "snd",
                      "row": {
                        "label": "fst",
                        "row": {
                          "type": "empty",
                        },
                        "type": "extension",
                        "value": {
                          "type": "Var",
                          "variable": {
                            "index": 1,
                            "type": "Bound",
                          },
                        },
                      },
                      "type": "extension",
                      "value": {
                        "arg": {
                          "type": "Var",
                          "variable": {
                            "name": "fst",
                            "type": "Label",
                          },
                        },
                        "func": {
                          "type": "Var",
                          "variable": {
                            "index": 0,
                            "type": "Bound",
                          },
                        },
                        "icit": "Explicit",
                        "type": "App",
                      },
                    },
                    "type": "Row",
                  },
                  "func": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "Schema",
                    },
                  },
                  "icit": "Explicit",
                  "type": "App",
                },
                "type": "Abs",
              },
              "type": "Abs",
            },
            "type": "Abs",
          },
          "variable": "Pair",
        },
        {
          "annotation": {
            "binder": {
              "annotation": {
                "row": {
                  "label": "snd",
                  "row": {
                    "label": "fst",
                    "row": {
                      "type": "empty",
                    },
                    "type": "extension",
                    "value": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Num",
                      },
                    },
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Atom",
                      "value": "String",
                    },
                  },
                },
                "type": "Row",
              },
              "type": "Sigma",
              "variable": "$sig",
            },
            "closure": {
              "ctx": {
                "env": [
                  {
                    "name": {
                      "annotation": {
                        "binder": {
                          "annotation": {
                            "type": "Lit",
                            "value": {
                              "type": "Atom",
                              "value": "Num",
                            },
                          },
                          "icit": "Explicit",
                          "type": "Pi",
                          "variable": "t1",
                        },
                        "closure": {
                          "ctx": {
                            "env": [
                              {
                                "name": {
                                  "annotation": {
                                    "type": "Lit",
                                    "value": {
                                      "type": "Atom",
                                      "value": "Type",
                                    },
                                  },
                                  "icit": "Explicit",
                                  "type": "Lambda",
                                  "variable": "a",
                                },
                                "nf": {
                                  "type": "Lit",
                                  "value": {
                                    "type": "Atom",
                                    "value": "Num",
                                  },
                                },
                                "type": [
                                  {
                                    "annotation": {
                                      "type": "Lit",
                                      "value": {
                                        "type": "Atom",
                                        "value": "Type",
                                      },
                                    },
                                    "icit": "Explicit",
                                    "type": "Lambda",
                                    "variable": "a",
                                  },
                                  "source",
                                  {},
                                ],
                              },
                              {
                                "name": {
                                  "type": "Let",
                                  "variable": "Pair",
                                },
                                "nf": {
                                  "type": "Neutral",
                                  "value": {
                                    "type": "Var",
                                    "variable": {
                                      "lvl": 0,
                                      "type": "Bound",
                                    },
                                  },
                                },
                                "type": [
                                  {
                                    "type": "Let",
                                    "variable": "Pair",
                                  },
                                  "source",
                                  {
                                    "binder": {
                                      "annotation": {
                                        "type": "Lit",
                                        "value": {
                                          "type": "Atom",
                                          "value": "Type",
                                        },
                                      },
                                      "icit": "Explicit",
                                      "type": "Pi",
                                      "variable": "a",
                                    },
                                    "closure": {
                                      "ctx": {
                                        "env": [],
                                        "implicits": [],
                                        "labels": {},
                                        "metas": {},
                                        "record": {},
                                        "sigma": {},
                                        "zonker": {},
                                      },
                                      "term": {
                                        "binding": {
                                          "annotation": {
                                            "binding": {
                                              "annotation": {
                                                "type": "Var",
                                                "variable": {
                                                  "index": 0,
                                                  "type": "Bound",
                                                },
                                              },
                                              "icit": "Explicit",
                                              "type": "Pi",
                                              "variable": "t1",
                                            },
                                            "body": {
                                              "type": "Lit",
                                              "value": {
                                                "type": "Atom",
                                                "value": "Type",
                                              },
                                            },
                                            "type": "Abs",
                                          },
                                          "icit": "Explicit",
                                          "type": "Pi",
                                          "variable": "p",
                                        },
                                        "body": {
                                          "type": "Lit",
                                          "value": {
                                            "type": "Atom",
                                            "value": "Type",
                                          },
                                        },
                                        "type": "Abs",
                                      },
                                      "type": "Closure",
                                    },
                                    "type": "Abs",
                                  },
                                ],
                              },
                            ],
                            "implicits": [],
                            "labels": {},
                            "metas": {
                              "1": {
                                "ann": {
                                  "type": "Lit",
                                  "value": {
                                    "type": "Atom",
                                    "value": "Type",
                                  },
                                },
                                "meta": {
                                  "lvl": 3,
                                  "type": "Meta",
                                  "val": 1,
                                },
                              },
                              "2": {
                                "ann": {
                                  "type": "Lit",
                                  "value": {
                                    "type": "Atom",
                                    "value": "Type",
                                  },
                                },
                                "meta": {
                                  "lvl": 3,
                                  "type": "Meta",
                                  "val": 2,
                                },
                              },
                            },
                            "record": {},
                            "sigma": {},
                            "zonker": {
                              "1": {
                                "type": "Var",
                                "variable": {
                                  "lvl": 1,
                                  "type": "Bound",
                                },
                              },
                            },
                          },
                          "term": {
                            "type": "Lit",
                            "value": {
                              "type": "Atom",
                              "value": "Type",
                            },
                          },
                          "type": "Closure",
                        },
                        "type": "Abs",
                      },
                      "icit": "Explicit",
                      "type": "Lambda",
                      "variable": "p",
                    },
                    "nf": {
                      "binder": {
                        "annotation": {
                          "type": "Lit",
                          "value": {
                            "type": "Atom",
                            "value": "Num",
                          },
                        },
                        "icit": "Explicit",
                        "type": "Lambda",
                        "variable": "n",
                      },
                      "closure": {
                        "ctx": {
                          "env": [
                            {
                              "name": {
                                "type": "Let",
                                "variable": "Pair",
                              },
                              "nf": {
                                "binder": {
                                  "annotation": {
                                    "type": "Lit",
                                    "value": {
                                      "type": "Atom",
                                      "value": "Type",
                                    },
                                  },
                                  "icit": "Explicit",
                                  "type": "Lambda",
                                  "variable": "a",
                                },
                                "closure": {
                                  "ctx": {
                                    "env": [
                                      {
                                        "name": {
                                          "type": "Let",
                                          "variable": "Pair",
                                        },
                                        "nf": {
                                          "type": "Neutral",
                                          "value": {
                                            "type": "Var",
                                            "variable": {
                                              "lvl": 0,
                                              "type": "Bound",
                                            },
                                          },
                                        },
                                        "type": [
                                          {
                                            "type": "Let",
                                            "variable": "Pair",
                                          },
                                          "source",
                                          {
                                            "binder": {
                                              "annotation": {
                                                "type": "Lit",
                                                "value": {
                                                  "type": "Atom",
                                                  "value": "Type",
                                                },
                                              },
                                              "icit": "Explicit",
                                              "type": "Pi",
                                              "variable": "a",
                                            },
                                            "closure": {
                                              "ctx": {
                                                "env": [],
                                                "implicits": [],
                                                "labels": {},
                                                "metas": {},
                                                "record": {},
                                                "sigma": {},
                                                "zonker": {},
                                              },
                                              "term": {
                                                "binding": {
                                                  "annotation": {
                                                    "binding": {
                                                      "annotation": {
                                                        "type": "Var",
                                                        "variable": {
                                                          "index": 0,
                                                          "type": "Bound",
                                                        },
                                                      },
                                                      "icit": "Explicit",
                                                      "type": "Pi",
                                                      "variable": "t1",
                                                    },
                                                    "body": {
                                                      "type": "Lit",
                                                      "value": {
                                                        "type": "Atom",
                                                        "value": "Type",
                                                      },
                                                    },
                                                    "type": "Abs",
                                                  },
                                                  "icit": "Explicit",
                                                  "type": "Pi",
                                                  "variable": "p",
                                                },
                                                "body": {
                                                  "type": "Lit",
                                                  "value": {
                                                    "type": "Atom",
                                                    "value": "Type",
                                                  },
                                                },
                                                "type": "Abs",
                                              },
                                              "type": "Closure",
                                            },
                                            "type": "Abs",
                                          },
                                        ],
                                      },
                                    ],
                                    "implicits": [],
                                    "labels": {},
                                    "metas": {
                                      "1": {
                                        "ann": {
                                          "type": "Lit",
                                          "value": {
                                            "type": "Atom",
                                            "value": "Type",
                                          },
                                        },
                                        "meta": {
                                          "lvl": 3,
                                          "type": "Meta",
                                          "val": 1,
                                        },
                                      },
                                      "2": {
                                        "ann": {
                                          "type": "Lit",
                                          "value": {
                                            "type": "Atom",
                                            "value": "Type",
                                          },
                                        },
                                        "meta": {
                                          "lvl": 3,
                                          "type": "Meta",
                                          "val": 2,
                                        },
                                      },
                                    },
                                    "record": {},
                                    "sigma": {},
                                    "zonker": {
                                      "1": {
                                        "type": "Var",
                                        "variable": {
                                          "lvl": 1,
                                          "type": "Bound",
                                        },
                                      },
                                    },
                                  },
                                  "term": {
                                    "binding": {
                                      "annotation": {
                                        "binding": {
                                          "annotation": {
                                            "type": "Var",
                                            "variable": {
                                              "index": 0,
                                              "type": "Bound",
                                            },
                                          },
                                          "icit": "Explicit",
                                          "type": "Pi",
                                          "variable": "t1",
                                        },
                                        "body": {
                                          "type": "Lit",
                                          "value": {
                                            "type": "Atom",
                                            "value": "Type",
                                          },
                                        },
                                        "type": "Abs",
                                      },
                                      "icit": "Explicit",
                                      "type": "Lambda",
                                      "variable": "p",
                                    },
                                    "body": {
                                      "binding": {
                                        "annotation": {
                                          "row": {
                                            "label": "snd",
                                            "row": {
                                              "label": "fst",
                                              "row": {
                                                "type": "empty",
                                              },
                                              "type": "extension",
                                              "value": {
                                                "type": "Var",
                                                "variable": {
                                                  "index": 1,
                                                  "type": "Bound",
                                                },
                                              },
                                            },
                                            "type": "extension",
                                            "value": {
                                              "arg": {
                                                "type": "Var",
                                                "variable": {
                                                  "name": "fst",
                                                  "type": "Label",
                                                },
                                              },
                                              "func": {
                                                "type": "Var",
                                                "variable": {
                                                  "index": 0,
                                                  "type": "Bound",
                                                },
                                              },
                                              "icit": "Explicit",
                                              "type": "App",
                                            },
                                          },
                                          "type": "Row",
                                        },
                                        "type": "Sigma",
                                        "variable": "$sig",
                                      },
                                      "body": {
                                        "arg": {
                                          "row": {
                                            "label": "snd",
                                            "row": {
                                              "label": "fst",
                                              "row": {
                                                "type": "empty",
                                              },
                                              "type": "extension",
                                              "value": {
                                                "type": "Var",
                                                "variable": {
                                                  "index": 1,
                                                  "type": "Bound",
                                                },
                                              },
                                            },
                                            "type": "extension",
                                            "value": {
                                              "arg": {
                                                "type": "Var",
                                                "variable": {
                                                  "name": "fst",
                                                  "type": "Label",
                                                },
                                              },
                                              "func": {
                                                "type": "Var",
                                                "variable": {
                                                  "index": 0,
                                                  "type": "Bound",
                                                },
                                              },
                                              "icit": "Explicit",
                                              "type": "App",
                                            },
                                          },
                                          "type": "Row",
                                        },
                                        "func": {
                                          "type": "Lit",
                                          "value": {
                                            "type": "Atom",
                                            "value": "Schema",
                                          },
                                        },
                                        "icit": "Explicit",
                                        "type": "App",
                                      },
                                      "type": "Abs",
                                    },
                                    "type": "Abs",
                                  },
                                  "type": "Closure",
                                },
                                "type": "Abs",
                              },
                              "type": [
                                {
                                  "type": "Let",
                                  "variable": "Pair",
                                },
                                "source",
                                {
                                  "binder": {
                                    "annotation": {
                                      "type": "Lit",
                                      "value": {
                                        "type": "Atom",
                                        "value": "Type",
                                      },
                                    },
                                    "icit": "Explicit",
                                    "type": "Pi",
                                    "variable": "a",
                                  },
                                  "closure": {
                                    "ctx": {
                                      "env": [],
                                      "implicits": [],
                                      "labels": {},
                                      "metas": {},
                                      "record": {},
                                      "sigma": {},
                                      "zonker": {},
                                    },
                                    "term": {
                                      "binding": {
                                        "annotation": {
                                          "binding": {
                                            "annotation": {
                                              "type": "Var",
                                              "variable": {
                                                "index": 0,
                                                "type": "Bound",
                                              },
                                            },
                                            "icit": "Explicit",
                                            "type": "Pi",
                                            "variable": "t1",
                                          },
                                          "body": {
                                            "type": "Lit",
                                            "value": {
                                              "type": "Atom",
                                              "value": "Type",
                                            },
                                          },
                                          "type": "Abs",
                                        },
                                        "icit": "Explicit",
                                        "type": "Pi",
                                        "variable": "p",
                                      },
                                      "body": {
                                        "type": "Lit",
                                        "value": {
                                          "type": "Atom",
                                          "value": "Type",
                                        },
                                      },
                                      "type": "Abs",
                                    },
                                    "type": "Closure",
                                  },
                                  "type": "Abs",
                                },
                              ],
                            },
                          ],
                          "implicits": [],
                          "labels": {},
                          "metas": {
                            "1": {
                              "ann": {
                                "type": "Lit",
                                "value": {
                                  "type": "Atom",
                                  "value": "Type",
                                },
                              },
                              "meta": {
                                "lvl": 3,
                                "type": "Meta",
                                "val": 1,
                              },
                            },
                            "2": {
                              "ann": {
                                "type": "Lit",
                                "value": {
                                  "type": "Atom",
                                  "value": "Type",
                                },
                              },
                              "meta": {
                                "lvl": 3,
                                "type": "Meta",
                                "val": 2,
                              },
                            },
                          },
                          "record": {},
                          "sigma": {},
                          "zonker": {
                            "1": {
                              "type": "Var",
                              "variable": {
                                "lvl": 1,
                                "type": "Bound",
                              },
                            },
                          },
                        },
                        "term": {
                          "type": "Var",
                          "variable": {
                            "name": "String",
                            "type": "Free",
                          },
                        },
                        "type": "Closure",
                      },
                      "type": "Abs",
                    },
                    "type": [
                      {
                        "annotation": {
                          "binder": {
                            "annotation": {
                              "type": "Lit",
                              "value": {
                                "type": "Atom",
                                "value": "Num",
                              },
                            },
                            "icit": "Explicit",
                            "type": "Pi",
                            "variable": "t1",
                          },
                          "closure": {
                            "ctx": {
                              "env": [
                                {
                                  "name": {
                                    "annotation": {
                                      "type": "Lit",
                                      "value": {
                                        "type": "Atom",
                                        "value": "Type",
                                      },
                                    },
                                    "icit": "Explicit",
                                    "type": "Lambda",
                                    "variable": "a",
                                  },
                                  "nf": {
                                    "type": "Lit",
                                    "value": {
                                      "type": "Atom",
                                      "value": "Num",
                                    },
                                  },
                                  "type": [
                                    {
                                      "annotation": {
                                        "type": "Lit",
                                        "value": {
                                          "type": "Atom",
                                          "value": "Type",
                                        },
                                      },
                                      "icit": "Explicit",
                                      "type": "Lambda",
                                      "variable": "a",
                                    },
                                    "source",
                                    {},
                                  ],
                                },
                                {
                                  "name": {
                                    "type": "Let",
                                    "variable": "Pair",
                                  },
                                  "nf": {
                                    "type": "Neutral",
                                    "value": {
                                      "type": "Var",
                                      "variable": {
                                        "lvl": 0,
                                        "type": "Bound",
                                      },
                                    },
                                  },
                                  "type": [
                                    {
                                      "type": "Let",
                                      "variable": "Pair",
                                    },
                                    "source",
                                    {
                                      "binder": {
                                        "annotation": {
                                          "type": "Lit",
                                          "value": {
                                            "type": "Atom",
                                            "value": "Type",
                                          },
                                        },
                                        "icit": "Explicit",
                                        "type": "Pi",
                                        "variable": "a",
                                      },
                                      "closure": {
                                        "ctx": {
                                          "env": [],
                                          "implicits": [],
                                          "labels": {},
                                          "metas": {},
                                          "record": {},
                                          "sigma": {},
                                          "zonker": {},
                                        },
                                        "term": {
                                          "binding": {
                                            "annotation": {
                                              "binding": {
                                                "annotation": {
                                                  "type": "Var",
                                                  "variable": {
                                                    "index": 0,
                                                    "type": "Bound",
                                                  },
                                                },
                                                "icit": "Explicit",
                                                "type": "Pi",
                                                "variable": "t1",
                                              },
                                              "body": {
                                                "type": "Lit",
                                                "value": {
                                                  "type": "Atom",
                                                  "value": "Type",
                                                },
                                              },
                                              "type": "Abs",
                                            },
                                            "icit": "Explicit",
                                            "type": "Pi",
                                            "variable": "p",
                                          },
                                          "body": {
                                            "type": "Lit",
                                            "value": {
                                              "type": "Atom",
                                              "value": "Type",
                                            },
                                          },
                                          "type": "Abs",
                                        },
                                        "type": "Closure",
                                      },
                                      "type": "Abs",
                                    },
                                  ],
                                },
                              ],
                              "implicits": [],
                              "labels": {},
                              "metas": {
                                "1": {
                                  "ann": {
                                    "type": "Lit",
                                    "value": {
                                      "type": "Atom",
                                      "value": "Type",
                                    },
                                  },
                                  "meta": {
                                    "lvl": 3,
                                    "type": "Meta",
                                    "val": 1,
                                  },
                                },
                                "2": {
                                  "ann": {
                                    "type": "Lit",
                                    "value": {
                                      "type": "Atom",
                                      "value": "Type",
                                    },
                                  },
                                  "meta": {
                                    "lvl": 3,
                                    "type": "Meta",
                                    "val": 2,
                                  },
                                },
                              },
                              "record": {},
                              "sigma": {},
                              "zonker": {
                                "1": {
                                  "type": "Var",
                                  "variable": {
                                    "lvl": 1,
                                    "type": "Bound",
                                  },
                                },
                              },
                            },
                            "term": {
                              "type": "Lit",
                              "value": {
                                "type": "Atom",
                                "value": "Type",
                              },
                            },
                            "type": "Closure",
                          },
                          "type": "Abs",
                        },
                        "icit": "Explicit",
                        "type": "Lambda",
                        "variable": "p",
                      },
                      "source",
                      {},
                    ],
                  },
                  {
                    "name": {
                      "annotation": {
                        "type": "Lit",
                        "value": {
                          "type": "Atom",
                          "value": "Type",
                        },
                      },
                      "icit": "Explicit",
                      "type": "Lambda",
                      "variable": "a",
                    },
                    "nf": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Num",
                      },
                    },
                    "type": [
                      {
                        "annotation": {
                          "type": "Lit",
                          "value": {
                            "type": "Atom",
                            "value": "Type",
                          },
                        },
                        "icit": "Explicit",
                        "type": "Lambda",
                        "variable": "a",
                      },
                      "source",
                      {},
                    ],
                  },
                  {
                    "name": {
                      "type": "Let",
                      "variable": "Pair",
                    },
                    "nf": {
                      "type": "Neutral",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "lvl": 0,
                          "type": "Bound",
                        },
                      },
                    },
                    "type": [
                      {
                        "type": "Let",
                        "variable": "Pair",
                      },
                      "source",
                      {
                        "binder": {
                          "annotation": {
                            "type": "Lit",
                            "value": {
                              "type": "Atom",
                              "value": "Type",
                            },
                          },
                          "icit": "Explicit",
                          "type": "Pi",
                          "variable": "a",
                        },
                        "closure": {
                          "ctx": {
                            "env": [],
                            "implicits": [],
                            "labels": {},
                            "metas": {},
                            "record": {},
                            "sigma": {},
                            "zonker": {},
                          },
                          "term": {
                            "binding": {
                              "annotation": {
                                "binding": {
                                  "annotation": {
                                    "type": "Var",
                                    "variable": {
                                      "index": 0,
                                      "type": "Bound",
                                    },
                                  },
                                  "icit": "Explicit",
                                  "type": "Pi",
                                  "variable": "t1",
                                },
                                "body": {
                                  "type": "Lit",
                                  "value": {
                                    "type": "Atom",
                                    "value": "Type",
                                  },
                                },
                                "type": "Abs",
                              },
                              "icit": "Explicit",
                              "type": "Pi",
                              "variable": "p",
                            },
                            "body": {
                              "type": "Lit",
                              "value": {
                                "type": "Atom",
                                "value": "Type",
                              },
                            },
                            "type": "Abs",
                          },
                          "type": "Closure",
                        },
                        "type": "Abs",
                      },
                    ],
                  },
                ],
                "implicits": [],
                "labels": {},
                "metas": {
                  "1": {
                    "ann": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 3,
                      "type": "Meta",
                      "val": 1,
                    },
                  },
                  "2": {
                    "ann": {
                      "type": "Lit",
                      "value": {
                        "type": "Atom",
                        "value": "Type",
                      },
                    },
                    "meta": {
                      "lvl": 3,
                      "type": "Meta",
                      "val": 2,
                    },
                  },
                },
                "record": {},
                "sigma": {},
                "zonker": {
                  "1": {
                    "type": "Var",
                    "variable": {
                      "lvl": 1,
                      "type": "Bound",
                    },
                  },
                },
              },
              "term": {
                "arg": {
                  "row": {
                    "label": "snd",
                    "row": {
                      "label": "fst",
                      "row": {
                        "type": "empty",
                      },
                      "type": "extension",
                      "value": {
                        "type": "Var",
                        "variable": {
                          "index": 1,
                          "type": "Bound",
                        },
                      },
                    },
                    "type": "extension",
                    "value": {
                      "arg": {
                        "type": "Var",
                        "variable": {
                          "name": "fst",
                          "type": "Label",
                        },
                      },
                      "func": {
                        "type": "Var",
                        "variable": {
                          "index": 0,
                          "type": "Bound",
                        },
                      },
                      "icit": "Explicit",
                      "type": "App",
                    },
                  },
                  "type": "Row",
                },
                "func": {
                  "type": "Lit",
                  "value": {
                    "type": "Atom",
                    "value": "Schema",
                  },
                },
                "icit": "Explicit",
                "type": "App",
              },
              "type": "Closure",
            },
            "type": "Abs",
          },
          "type": "Let",
          "value": {
            "arg": {
              "row": {
                "label": "snd",
                "row": {
                  "label": "fst",
                  "row": {
                    "type": "empty",
                  },
                  "type": "extension",
                  "value": {
                    "type": "Lit",
                    "value": {
                      "type": "Num",
                      "value": 1,
                    },
                  },
                },
                "type": "extension",
                "value": {
                  "type": "Lit",
                  "value": {
                    "type": "String",
                    "value": "hello",
                  },
                },
              },
              "type": "Row",
            },
            "func": {
              "type": "Lit",
              "value": {
                "type": "Atom",
                "value": "Struct",
              },
            },
            "icit": "Explicit",
            "type": "App",
          },
          "variable": "p",
        },
      ],
      "type": "Block",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "String",
      },
    },
    "typedTerms": {},
  },
}
`;
